Forcing high resolution PNG to render on Retina

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="container">
         <div class="logo">
             <!-- Replace the src attribute with the path to your logo -->
-            <img src="img/narwhale-logo.png" alt="Narwhale Pod Logo">
+            <img src="img/narwhale-logo.png" srcset="narwhale-logo.png 1x, narwhale-logo@2x.png 2x" alt="Narwhale Pod Logo">
         </div>
         <div class="tagline">
             <span id="dynamic-text"></span>
