Added link to publications

--- a/index.html
+++ b/index.html
@@ -9,19 +9,19 @@
 <body>
     <div class="container">
         <div class="logo">
-            <!-- Replace the src attribute with the path to your logo -->
             <img src="img/narwhale-logo.png" srcset="img/narwhale-logo.png 1x, img/narwhale-logo@2x.png 2x" alt="Narwhale Pod Logo">
         </div>
-        <div class="tagline">
-            <span id="dynamic-text"></span>
+
+        <div class="cta">
+            <a class="button" href="https://medium.com/narwhale-pod" target="_blank" rel="noopener noreferrer">publications</a>
         </div>
+        
+        <div class="tagline">
+            <span class="tagline-text" id="dynamic-text"></span>
+        </div>
+       
         <div class="footer">
-            <p>Follow us for updates:</p>
-            <div class="social-links">
-                <a href="https://twitter.com" target="_blank">Twitter</a>
-                <a href="https://instagram.com" target="_blank">Instagram</a>
-                <a href="https://facebook.com" target="_blank">Facebook</a>
-            </div>
+            <p>&copy; 2025 Narwhale Pod</p>
         </div>
     </div>
     <script src="js/script.js"></script>
